# bigballer

./: .gitignore  Makefile  README.md  gen.py
app/: .env.example  Makefile  out.py  pyproject.toml  tmp.py
app/src/bigballer_api/: __init__.py  __main__.py  models.py  settings.py
app/src/bigballer_api/data/: __init__.py
app/src/bigballer_api/generator/: __init__.py  _blender_generator.py  _color_generator.py  _color_tables.py  _words.py
web/: Makefile  package-lock.json  package.json
web/src/: index.html
web/src/css/: index.css
web/src/js/: index.js
