[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigballer_api"
version = "0.0.1"
license = { text = "AGPL-3.0-only" }
authors = [
  { name="Michael Manis", email="michaelmanis@tutanota.com" },
]
description = "Big Baller API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

dependencies = [
    "couchbase~=4.1",
    "fastapi~=0.98",
    "pyjwt[crypto]~=2.7",
    "python-dotenv~=1.0",
    "requests~=2.31",
    "uvicorn~=0.22",
]
[project.optional-dependencies]
dev = [
    "black~=23.3",
    "nltk~=3.8"
]

[project.urls]
"Homepage" = "https://github.com/ThePyrotechnic/bigballer"
"Bug Tracker" = "https://github.com/ThePyrotechnic/bigballer/issues"
